2009-08-22:
	* Fix fencepost error in create.c
	* Fix uninitialized value in create.c

2009-08-10: 0.1 release
	* V1 and V2 package formats
	* gzip and bzip2 compression options
	* Text and Berkeley DB database formats
	* convert, convertdb, create, createdb, dumpdb, install, remove,
	  repairdb and status commands

2008-02-09: Start of development